@@ -2,7 +2,7 @@
 
 use strict;
 use warnings;
-use Test::More tests => 122;
+use Test::More tests => 123;
 use Net::SSLeay qw/MBSTRING_ASC MBSTRING_UTF8 EVP_PK_RSA EVP_PKT_SIGN EVP_PKT_ENC/;
 use File::Spec;
 use utf8;
@@ -32,10 +32,14 @@ is(Net::SSLeay::X509_NAME_cmp($ca_issuer, $ca_subject), 0, "X509_NAME_cmp");
   ok(my $rsa = Net::SSLeay::RSA_generate_key(2048, &Net::SSLeay::RSA_F4), "RSA_generate_key");
   ok(Net::SSLeay::EVP_PKEY_assign_RSA($pk,$rsa), "EVP_PKEY_assign_RSA");
 
-# ONly in pre 1.1:
-#  my @params = Net::SSLeay::RSA_get_key_parameters($rsa);
-#  ok(@params == 8, "RSA_get_key_parameters");
-
+  SKIP: 
+  {
+    skip 'openssl<1.1.0 required', 1 unless Net::SSLeay::SSLeay < 0x10100000
+       or Net::SSLeay::constant("LIBRESSL_VERSION_NUMBER");
+    my @params = Net::SSLeay::RSA_get_key_parameters($rsa);
+    ok(@params == 8, "RSA_get_key_parameters");
+  }
+ 
   ok(my $x509  = Net::SSLeay::X509_new(), "X509_new");
   ok(Net::SSLeay::X509_set_pubkey($x509,$pk), "X509_set_pubkey");
   ok(my $name = Net::SSLeay::X509_get_subject_name($x509), "X509_get_subject_name");
